--- a/P004278.opf/meta.yml
+++ b/P004278.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P004278
+id: P004278
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W29059
   title: གསུང་འབུམ། མདོ་སྔགས་བསྟན་པའི་ཉི་མ
-  volume: ''
   author: ''
+  volumes: {}
