--- a/P004278.opf/meta.yml
+++ b/P004278.opf/meta.yml
@@ -4,4 +4,19 @@ source_metadata:
   id: bdr:W29059
   title: གསུང་འབུམ། མདོ་སྔགས་བསྟན་པའི་ཉི་མ
   author: ''
-  volumes: {}
+  volumes:
+    915e0d6754bc4ff6a1879b012f3f7fb8:
+      image_group_id: I5695
+      title: ''
+      volume_number: 1
+      total_pages: 355
+    f65bb57df680450599327329d24e1e95:
+      image_group_id: I5696
+      title: ''
+      volume_number: 2
+      total_pages: 357
+    621f2a5935bf4f58bccfa34261dbd2ed:
+      image_group_id: I5697
+      title: ''
+      volume_number: 3
+      total_pages: 334
