--- a/P004278.opf/meta.yml
+++ b/P004278.opf/meta.yml
@@ -10,13 +10,16 @@ source_metadata:
       title: ''
       volume_number: 1
       total_pages: 355
+      base_file: v001.txt
     f65bb57df680450599327329d24e1e95:
       image_group_id: I5696
       title: ''
       volume_number: 2
       total_pages: 357
+      base_file: v002.txt
     621f2a5935bf4f58bccfa34261dbd2ed:
       image_group_id: I5697
       title: ''
       volume_number: 3
       total_pages: 334
+      base_file: v003.txt
