--- a/P004278.opf/layers/v002/Pagination.yml
+++ b/P004278.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: 4b2723d4924c464d908e40113ca43612
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   ca618dcd69d742e78529bc77146c5c8a:
