--- a/P004278.opf/layers/v003/Pagination.yml
+++ b/P004278.opf/layers/v003/Pagination.yml
@@ -1,5 +1,5 @@
 id: caa0f052654c4fdb99241936adc58417
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   31bde49105ad4bcdb656d6350b4a7299:
