--- a/P004278.opf/layers/v001/Pagination.yml
+++ b/P004278.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 99097d330a4e4f0b94a968e936897bb2
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   af12a76e8ac9486ab088a57a7c1e7bda:
