--- a/P004278.opf/meta.yml
+++ b/P004278.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P004278
 initial_creation_type: ocr
+created_at: 25/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W29059
   title: གསུང་འབུམ། མདོ་སྔགས་བསྟན་པའི་ཉི་མ
